--- a/templates/event-details.html
+++ b/templates/event-details.html
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col">
       {# TODO: Replace EVENT NAME with the event's name #}
-      <h2>EVENT NAME</h2>
+      <h2>{{ name }}</h2>
 
       {#
         TODO: Replace THIS PAGE IS FOR FURTHER STUDY with
